Fixes clock light dark mode switch

--- a/WebsiteSchoolMT/CSS/v3.css
+++ b/WebsiteSchoolMT/CSS/v3.css
@@ -203,10 +203,10 @@ a{
 
 #animation-container{
 
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(127, 127, 127, 0);
     border:2px solid rgb(245,219,55);
     border-radius: 10px;
-    margin: 25%;
+    margin-top: 10%;
 
     padding: 20px;
     width: 400px;
@@ -232,6 +232,7 @@ a{
 a{
     color: var(--text-color-dark);
 }
+
 body.light-mode a {
     text-decoration: none;
     color: var(--text-color-light)
